# mlkit

./: .cvsignore  .gitignore  .travis.yml  CNAME  Dockerfile  INSTALL  Makefile  Makefile.in  MakefileDist  Makefiledefault  NEWS  NEWS.md  NEWS_SMLSERVER  NEWS_SMLSERVER.md  NEWS_SMLTOJS  NEWS_SMLTOJS.md  README  README.md  README_BARRY  README_BARRY.md  README_BIN.in  README_SMLSERVER  README_SMLSERVER.md  README_SMLTOJS  README_SMLTOJS.md  _config.yml  about.md  archive.html  autobuild  basis.md  bootstrap.md  bugs.md  configure.ac  copyright  cv.md  doc.md  download.md  index.html  index.md  mlbasisfiles.md  (+12 more)
_layouts/: front.html
_posts/: 2014-10-02-getting-started-with-smackage.md
basis/: .cvsignore  .gitignore  ARRAY.sig  ARRAY.sml  ARRAY2.sig  ARRAY2.sml  ARRAYSORT.sig  ARRAYSORT.sml  ARRAY_SLICE.sml  Array.sml  Array2.sml  Arraysort.sml  BINARYMAP.sig  BINARYMAP.sml  BINARYSET.sml  BIN_IO.sml  BIT_FLAGS.sml  BOOL.sig  BOOL.sml  BYTE.sig  BYTE.sml  BinIO.sml  Binaryset.sml  BitFlags.sml  Bool.sml  ByteSlice.sml  ByteTable.sml  ByteVector.sml  CHAR.sig  CHAR.sml  COMMAND_LINE.sml  Char.sml  CommandLine.sml  DATE.sig  DATE.sml  DYNLIB.sig  DYNLIB.sml  Date.sml  Dynlib.sml  FORK_JOIN.sig  (+167 more)
benchmarks/: .gitignore  DLX.sml  DLXSimulator.sml  FuhMishra.mlb  Makefile  README.md  badlife.sml  fib37.sml  kbc.sml  kitmolgard.sml  kkb_eq.sml  lexgen.sml.out.ok  life.sml  molgard.sml  msort-rf.sml  msort.sml  professor.sml  simple.sml  tak.sml  vliw.sml  zebra.sml
doc/: .gitignore  README_BIN.in  README_SMLSERVER_BIN.in
docs/: ARRAY.sml.html  ARRAY2.sml.html  ARRAY_SLICE.sml.html  BASE64.sml.html  BIN_IO.sml.html  BITSTREAM.sml.html  BIT_FLAGS.sml.html  BOOL.sml.html  BYTE.sml.html  CHAR.sml.html  COMMAND_LINE.sml.html  CSTRING.sml.html  DATE.sml.html  EQ_HASH_DYN.sml.html  GENERAL.sml.html  HASH.sml.html  IEEE_REAL.sml.html  IMPERATIVE_IO.sml.html  INET_SOCK.sml.html  INTEGER.sml.html  INT_INF.sml.html  IO.sml.html  JSON.sml.html  LIST.sml.html  LIST_PAIR.sml.html  LIST_SORT.sml.html  MATH.sml.html  MD5.sml.html  MONO_ARRAY.sml.html  MONO_ARRAY2.sml.html  MONO_ARRAY_SLICE.sml.html  MONO_MAP.sml.html  MONO_SET.sml.html  MONO_TABLE.sml.html  MONO_VECTOR.sml.html  MONO_VECTOR_SLICE.sml.html  NET_HOST_DB.sml.html  OPTION.sml.html  OS.sml.html  OS_FILE_SYS.sml.html  (+50 more)
js/: .gitignore  MIT_LICENSE  Makefile  index.html  index.php  prims.js
kit/: .cvsignore  INSTALL  Makefile  Makefile.in  Makefiledefault  NEWS  NEWS_SMLSERVER  NEWS_SMLTOJS  README  README_BIN.in  README_SMLSERVER  README_SMLTOJS  aclocal.m4  configure.ac  copyright  mlkit-3.1.spec  mlkit-3.2.spec  mlkit.spec  mlkit.spec.in  newfile  readme  readme.x86-linux  roadmap  smlserver.spec  smlserver.spec.in  to_do  to_do_smlserver
kitdemo/: .cvsignore  IntSet.sml  Makefile  PolySet.mlb  PolySet.pm  PolySet.sml  SET.sig  Set.mlb  Set.pm  Set.sml  SetApp.sml  append.sml  apply.sml  ccalls.sml  ccalls.sml.mads  compose.pm  compose.sml  effect  effect.pm  elimpair.sml  escape.sml  escape1.sml  escape2.sml  ex.script  exceptions  exceptions.pm  exceptions.sml  expdec.sml  expdec2.sml  fold  fold1.sml  fold2.sml  fold3.sml  fold4.sml  fromto.pm  fromto.sml  hello  hello.pm  helloworld.sml  high-unb.sml  (+73 more)
kitlib/: .cvsignore  CRASH.sig  Crash.sml  IntFinMapPT.sml  IntFinMapPTExt.sml  IntFinMapPTImpl.sml  IntSet.sml  MONO_FINMAP.sml  MONO_FINMAP_EXT.sml  MONO_SET.sml  NatSet.sml  NatSetExt.sml  NatSetImpl.sml  OrderSet.sml  OrderSetExt.sml  OrderSetImpl.sml  PRETTYPRINT.sig  PrettyPrint.sml  Report.sml  finmap.mlb  finmap_ext.mlb  kitprofile.mlb  kitprofile.pm  kitprofile.sig  kitprofile.sml  pp.mlb  set_impl.mlb
ml-yacc-lib/: .cvsignore  base.sig  join.sml  lrtable.sml  ml-yacc-lib.mlb  ml-yacc-lib.pm  parser1.sml  parser2.sml
pdf/: ITU-TR-2004-43.bibtex.txt  TFP05final_mael.bibtex.txt  elsman_larsen-tr-2003-34.bibtex.txt  equality.bibtex.txt  icfp99.bibtex.txt  kam.bibtex.txt  masters.bibtex.txt  mlkit-4.3.0-bibtex.txt  (+15 more)
(+4838 files in other folders)
